# pysharepack

./: CHANGELOG.md  README.md  pyproject.toml  shell.bat
src/pysharepack/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
